# kite

./: .pre-commit-config.yaml  README.md  pyproject.toml
kite/: __init__.py  accessanalyzer.py  acm.py  acm_pca.py  check_themes.py  cli.py  cloudfront.py  cloudtrail.py  cognito.py  collect.py  conditions.py  config.py  configservice.py  data.py  detective.py  dynamodb.py  ec2.py  ecs.py  efs.py  eks.py  elbv2.py  guardduty.py  helpers.py  iam.py  identity_center.py  identity_store.py  kms.py  lambda_.py  logs.py  models.py  networkfirewall.py  organizations.py  rds.py  redshift.py  route53resolver.py  s3.py  sagemaker.py  secretsmanager.py  securityhub.py  sns.py  (+5 more)
kite/checks/: __init__.py  access_management_lifecycle.py  account_separation.py  active_external_access_analyzer.py  automate_ddb_data_retention.py  avoid_insecure_ssl_ciphers.py  avoid_root_usage.py  aws_managed_services_threat_intel.py  aws_service_evaluation.py  cloudfront_logging_enabled.py  code_reviews.py  control_network_flow_with_nacls.py  control_tower.py  core.py  credential_rotation.py  cross_account_confused_deputy_prevention.py  cw_data_protection_policies.py  data_perimeter_confused_deputy_protection.py  data_perimeter_trusted_identities.py  data_perimeter_trusted_networks.py  data_perimeter_trusted_resources.py  deploy_log_analysis_tools_in_audit_account.py  detect_missing_automated_lifecycle_management.py  (+79 more)
tests/: conftest.py  factories.py  test_aws_context_keys.py  test_cli.py  test_conditions.py  test_config.py  test_helpers.py  test_iam.py  test_identity_center.py  test_organizations.py
(+433 files in other folders)
