[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kite"
version = "0.1.0"
description = "A CLI tool for cloud security assessments"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Andy Caine", email = "andy@hyperscale.consulting" },
    { name = "Henry Addico", email = "henry@hyperscale.consulting" }
]
urls = { repository = "https://github.com/hyperscale-consulting/kite" }
dependencies = [
    "click>=8.0.0",
    "rich>=10.0.0",  # For beautiful terminal output
    "boto3>=1.26.0",  # For AWS support
    "pyyaml>=6.0.0",  # For YAML config file support
]

[project.scripts]
kite = "kite.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
    "mypy>=0.900",
    "pytest-mock>=3.14.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
